[package]
name = "yc"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
indicatif = "0.16.2"
clap = { version = "3.2.10", features = ["derive"] }
